--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
 	"tasks": [
 		{
 			"type": "shell",
-			"label": "C/C++: g++.exe build active file",
+			"label": "C/C++: g++.exe build active file IN NEW CMD",
 			"command": "g++.exe",
 			"args": [
 				"-g",
